--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
 
-    <!--compa amerika start -->
+    <!--------------------
+        compa amerika start
+    --------------------- -->
     <section class="head-banner">
         <main class="banner-parents">
             <div class="banner-info">
@@ -27,7 +29,9 @@
         </main>
     </section>
 
-    <!-- players section start -->
+    <!-- ----------------------
+        players section start
+    ----------------------- -->
     <section class="players">
         <article class="player">
             <img src="players/player-1.png" alt="">
@@ -128,7 +132,9 @@
 
     </section>
 
-    <!-- gallary section start -->
+    <!-- -----------------
+        gallary section start
+    -------------------- -->
     <section class="gallary">
         <div class="photo-left">
             <div class="photo">
@@ -148,7 +154,9 @@
 
     </section>
 
-    <!-- live watch -->
+    <!-- --------------
+        live watch
+    ----------------- -->
     <section class="chanel">
         <main class="live">
             <h2 class="live-tittle"> Watch live video Here</h2>
@@ -162,7 +170,9 @@
     </section>
 
 
-    <!-- footer start -->
+    <!-- ----------
+        footer start 
+    ------------------>
     <footer class="foot">
         <div class="footer-logo">
             <img src="images/Logo.png" alt="">
