--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         <main class="banner-parents">
             <div class="banner-info">
                 <h1 class="banner-tittle"> Conmebol <br> Copa America <br> 2021 </h1>
-                <button class="banner-button" type="submit">Watch Live <i class="fas fa-arrow-right"></i> </button>
+                <!-- <button class="banner-button" type="submit">Watch Live <i class="fas fa-arrow-right"></i> </button>
+                <br> -->
+                <a target="_blank" class="banner-button" href="https://shorifali.com/">Watch Live <i
+                        class="fas fa-arrow-right"></i></a>
+
             </div>
             <div class="head-photo">
                 <img src="images/banner.png" alt="">
@@ -178,10 +182,10 @@
             <img src="images/Logo.png" alt="">
         </div>
         <div class="social">
-            <i class="fab fa-instagram social-icon"></i>
-            <i class="fab fa-dribbble social-icon"></i>
-            <i class="fab fa-twitter social-icon"></i>
-            <i class="fab social-icon fa-youtube-square"></i>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram social-icon"></i></a>
+            <a href="https://dribbble.com/"><i class="fab fa-dribbble social-icon"></i></a>
+            <a href="https://twitter.com/"><i class="fab fa-twitter social-icon"></i></a>
+            <a href="https://www.youtube.com/"><i class="fab fa-youtube social-icon"></i></a>
         </div>
         <p> Copyright &copy; 2022 Football</p>
     </footer>
