--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
             <img src="images/Logo.png" alt="">
         </div>
         <div class="social">
-            <a href="https://www.instagram.com/"><i class="fab fa-instagram social-icon"></i></a>
-            <a href="https://dribbble.com/"><i class="fab fa-dribbble social-icon"></i></a>
-            <a href="https://twitter.com/"><i class="fab fa-twitter social-icon"></i></a>
-            <a href="https://www.youtube.com/"><i class="fab fa-youtube social-icon"></i></a>
+            <a target="-blank" href="https://www.instagram.com/"><i class="fab fa-instagram social-icon"></i></a>
+            <a target="-blank" href="https://dribbble.com/"><i class="fab fa-dribbble social-icon"></i></a>
+            <a target="-blank" href="https://twitter.com/"><i class="fab fa-twitter social-icon"></i></a>
+            <a target="-blank" href="https://www.youtube.com/"><i class="fab fa-youtube social-icon"></i></a>
         </div>
         <p> Copyright &copy; 2022 Football</p>
     </footer>
