--- a/index.html
+++ b/index.html
@@ -37,103 +37,131 @@
         players section start
     ----------------------- -->
     <section class="players">
-        <article class="player">
-            <img src="players/player-1.png" alt="">
-            <h2 class="player-tittle">Neymar jr</h2>
-            <p class="player-info">
-                Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional
-                footballer
-            </p>
-        </article>
-        <article class="player">
-            <img src="players/player-2.png" alt="">
-            <h2 class="player-tittle">Leo Messi</h2>
-            <p class="player-info">
-                He is an Argentine professional footballer who plays as a forward and captains the Argentina national
-                team.
-        </article>
-        <article class="player">
-            <img src="players/player-3.png" alt="">
-            <h2 class="player-tittle"> Cristiano Ronaldo</h2>
-            <p class="player-info">
-                Cristiano Ronaldo, in full Cristiano Ronaldo dos Santos Aveiro, (born February 5, 1985, Funchal,
-                Madeira,
-            </p>
-        </article>
-        <article class="player">
-            <img src="players/player-4.png" alt="">
-            <h2 class="player-tittle">Paulo Exequiel Dybala</h2>
-            <p class="player-info">
-                He is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the
-                Argentina national team.
-            </p>
-        </article>
-        <article class="player">
-            <img src="players/player-5.png" alt="">
-            <h2 class="player-tittle">Mesut Özi</h2>
-            <p class="player-info">
-                Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club
-                Fenerbahçe. Nicknamed "The Assist
-            </p>
-        </article>
-        <article class="player">
-            <img src="players/player-6.png" alt="">
-            <h2 class="player-tittle"> Mauro Icardi</h2>
-            <p class="player-info">
-                Mauro Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19 February 1993) is an Argentine
-                professional
-            </p>
-        </article>
-        <article class="player">
-            <img src="players/player-7.png" alt="">
-            <h2 class="player-tittle"> Di María </h2>
-            <p class="player-info">
-                Ángel Fabián Di María (born 14 February 1988) is an Argentine professional footballer who plays for
-                Ligue 1 club Paris Saint-Germain and the Argentina
-            </p>
-        </article>
-        <article class="player">
-            <img src="players/player-8.png" alt="">
-            <h2 class="player-tittle"> Kylian Mbappé </h2>
-            <p class="player-info">
-                Kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer who plays as a forward
-                for Ligue 1 club Paris Saint-Germain and the France
-            </p>
-        </article>
-        <article class="player">
-            <img src="players/player-9.png" alt="">
-            <h2 class="player-tittle"> Mohamed Salah </h2>
-            <p class="player-info">
-                Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for
-                Premier League club Liverpool and captains
-            </p>
-        </article>
-        <article class="player">
-            <img src="players/player-10.png" alt="">
-            <h2 class="player-tittle"> Harry Kane </h2>
-            <p class="player-info">
-                Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a striker
-                for Premier
-            </p>
-        </article>
-        <article class="player">
-            <img src="players/player-11.png" alt="">
-            <h2 class="player-tittle"> Kevin De Bruyne </h2>
-            <p class="player-info">
-                Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a midfielder for
-                Premier League
-            </p>
-
-        </article>
-        <article class="player">
-            <img src="players/player-12.png" alt="">
-            <h2 class="player-tittle"> Philippe Coutinho </h2>
-            <p class="player-info">
-                Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as an
-                attacking midfielder
-            </p>
-        </article>
-
+        <div class="player-fame">
+            <article class="player">
+                <img src="players/player-1.png" alt="">
+                <h2 class="player-tittle">Neymar jr</h2>
+                <p class="player-info">
+                    Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional
+                    footballer
+                </p>
+            </article>
+        </div>
+        <div class="player-fame">
+            <article class="player">
+                <img src="players/player-2.png" alt="">
+                <h2 class="player-tittle">Leo Messi</h2>
+                <p class="player-info">
+                    He is an Argentine professional footballer who plays as a forward and captains the Argentina
+                    national
+                    team.
+            </article>
+        </div>
+        <div class="player-fame">
+            <article class="player">
+                <img src="players/player-3.png" alt="">
+                <h2 class="player-tittle"> Cristiano Ronaldo</h2>
+                <p class="player-info">
+                    Cristiano Ronaldo, in full Cristiano Ronaldo dos Santos Aveiro, (born February 5, 1985, Funchal,
+                    Madeira,
+                </p>
+            </article>
+        </div>
+        <div class="player-fame">
+            <article class="player">
+                <img src="players/player-4.png" alt="">
+                <h2 class="player-tittle">Paulo Exequiel Dybala</h2>
+                <p class="player-info">
+                    He is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the
+                    Argentina national team.
+                </p>
+            </article>
+        </div>
+        <div class="player-fame">
+            <article class="player">
+                <img src="players/player-5.png" alt="">
+                <h2 class="player-tittle">Mesut Özi</h2>
+                <p class="player-info">
+                    Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig
+                    club
+                    Fenerbahçe. Nicknamed "The Assist
+                </p>
+            </article>
+        </div>
+        <div class="player-fame">
+            <article class="player">
+                <img src="players/player-6.png" alt="">
+                <h2 class="player-tittle"> Mauro Icardi</h2>
+                <p class="player-info">
+                    Mauro Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19 February 1993) is an
+                    Argentine
+                    professional
+                </p>
+            </article>
+        </div>
+        <div class="player-fame">
+            <article class="player">
+                <img src="players/player-7.png" alt="">
+                <h2 class="player-tittle"> Di María </h2>
+                <p class="player-info">
+                    Ángel Fabián Di María (born 14 February 1988) is an Argentine professional footballer who plays for
+                    Ligue 1 club Paris Saint-Germain and the Argentina
+                </p>
+            </article>
+        </div>
+        <div class="player-fame">
+            <article class="player">
+                <img src="players/player-8.png" alt="">
+                <h2 class="player-tittle"> Kylian Mbappé </h2>
+                <p class="player-info">
+                    Kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer who plays as a
+                    forward
+                    for Ligue 1 club Paris Saint-Germain and the France
+                </p>
+            </article>
+        </div>
+        <div class="player-fame">
+            <article class="player">
+                <img src="players/player-9.png" alt="">
+                <h2 class="player-tittle"> Mohamed Salah </h2>
+                <p class="player-info">
+                    Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for
+                    Premier League club Liverpool and captains
+                </p>
+            </article>
+        </div>
+        <div class="player-fame">
+            <article class="player">
+                <img src="players/player-10.png" alt="">
+                <h2 class="player-tittle"> Harry Kane </h2>
+                <p class="player-info">
+                    Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a
+                    striker
+                    for Premier
+                </p>
+            </article>
+        </div>
+        <div class="player-fame">
+            <article class="player">
+                <img src="players/player-11.png" alt="">
+                <h2 class="player-tittle"> Kevin De Bruyne </h2>
+                <p class="player-info">
+                    Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a midfielder
+                    for
+                    Premier League
+                </p>
+            </article>
+        </div>
+        <div class="player-fame">
+            <article class="player">
+                <img src="players/player-12.png" alt="">
+                <h2 class="player-tittle"> Philippe Coutinho </h2>
+                <p class="player-info">
+                    Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as an
+                    attacking midfielder
+                </p>
+            </article>
+        </div>
     </section>
 
     <!-- -----------------
