--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- css file  -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
+<!-- sir ami 17`` monitore responsive koreci, amar monitor squre so responsice korte onek problem hoi../ ai device thek responsive melano onek kosto kor,,,sutorang ektu char die responsive ta dekhben ..paese sir -->
 
 <body>
 
